fix: align START_PRINT params with documentation

--- a/golden-configs/neptunus-gschpoozi/macros.cfg
+++ b/golden-configs/neptunus-gschpoozi/macros.cfg
@@ -45,8 +45,8 @@ gcode:
     # ───────────────────────────────────────────────────────────────────────────
     {% set cfg = printer["gcode_macro _MACRO_CONFIG"] %}
     
-    {% set BED_TEMP = params.BED_TEMP|default(60)|int %}
-    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200)|int %}
+    {% set BED_TEMP = params.BED|default(60)|int %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER|default(200)|int %}
     {% set CHAMBER_TEMP = params.CHAMBER|default(cfg.chamber_temp_default)|int %}
     {% set MATERIAL = params.MATERIAL|default("PLA")|upper %}
     {% set MESH_MODE = params.MESH|default(cfg.bed_mesh_mode)|lower %}
