--- a/golden-configs/neptunus-gschpoozi/macros.cfg
+++ b/golden-configs/neptunus-gschpoozi/macros.cfg
@@ -287,7 +287,7 @@ gcode:
     {% elif MODE == "saved" %}
         BED_MESH_PROFILE LOAD=default
     {% elif MODE == "adaptive" %}
-        # Adaptive mesh - only scan print area (requires KAMP or similar)
+        # Adaptive mesh - only scan print area (native Klipper feature)
         BED_MESH_CALIBRATE ADAPTIVE=1 {mesh_method}
     {% else %}
         # Full bed mesh
