--- a/schema/config-sections.yaml
+++ b/schema/config-sections.yaml
@@ -567,7 +567,8 @@ bed_mesh:
     {% endif %}
     # Klipper requires probe_count when [bed_mesh] is present.
     # Always emit it with a safe default if state is missing/incomplete.
-    probe_count: {{ bed_leveling.bed_mesh.probe_count | default('5,5') }}
+    # Use default(..., true) so empty strings/falsey values also fall back.
+    probe_count: {{ bed_leveling.bed_mesh.probe_count | default('5,5', true) }}
     algorithm: {{ bed_leveling.bed_mesh.algorithm | default('bicubic') }}
     fade_start: {{ bed_leveling.bed_mesh.fade_start | default(0.6) }}
     fade_end: {{ bed_leveling.bed_mesh.fade_end | default(10.0) }}
