--- a/schema/config-sections.yaml
+++ b/schema/config-sections.yaml
@@ -670,19 +670,20 @@ common:
       # in the wizard.
       # ─────────────────────────────────────────────────────────────────────────────
       {% if tuning.tmc_autotune.emit_config | default(false) %}
-      [autotune_tmc]
-      {% if tuning.tmc_autotune.motor_x %}motor_x: {{ tuning.tmc_autotune.motor_x }}{% endif %}
-      {% if tuning.tmc_autotune.motor_y %}motor_y: {{ tuning.tmc_autotune.motor_y }}{% endif %}
-      {% if tuning.tmc_autotune.motor_z %}motor_z: {{ tuning.tmc_autotune.motor_z }}{% endif %}
-      {% if tuning.tmc_autotune.motor_extruder %}motor_extruder: {{ tuning.tmc_autotune.motor_extruder }}{% endif %}
+      # One section per tuned stepper/extruder.
+      # See: https://github.com/andrewmcgr/klipper_tmc_autotune#autotune-configuration
+      {% for s in (tuning.tmc_autotune.steppers | default([])) %}
+      [autotune_tmc {{ s.stepper }}]
+      {% if s.motor %}motor: {{ s.motor }}{% endif %}
       {% if tuning.tmc_autotune.voltage %}voltage: {{ tuning.tmc_autotune.voltage }}{% endif %}
       {% if tuning.tmc_autotune.tuning_goal %}tuning_goal: {{ tuning.tmc_autotune.tuning_goal }}{% endif %}
+
+      {% endfor %}
       {% else %}
-      # [autotune_tmc]
-      # motor_x: <select in wizard>
-      # motor_y: <select in wizard>
-      # motor_z: <select in wizard>
-      # motor_extruder: <select in wizard>
+      # [autotune_tmc stepper_x]
+      # motor: <select in wizard>
+      # [autotune_tmc stepper_y]
+      # motor: <select in wizard>
       # voltage: 24
       # tuning_goal: auto
       {% endif %}
