feat(wizard): separate tuning goals for core, Z, and extruder motors
- Core motors: separate voltage, motor, and tuning goal
- Z motors: separate voltage, motor, and tuning goal
- Extruder: separate voltage, motor, and tuning goal
- Each stepper now has its own tuning_goal in the generated config
- Template updated to use per-stepper tuning_goal with fallback

--- a/schema/config-sections.yaml
+++ b/schema/config-sections.yaml
@@ -622,7 +622,9 @@ common:
       {% elif tuning.tmc_autotune.voltage -%}
       voltage: {{ tuning.tmc_autotune.voltage }}
       {% endif -%}
-      {% if tuning.tmc_autotune.tuning_goal -%}
+      {% if s.tuning_goal -%}
+      tuning_goal: {{ s.tuning_goal }}
+      {% elif tuning.tmc_autotune.tuning_goal -%}
       tuning_goal: {{ tuning.tmc_autotune.tuning_goal }}
       {% endif %}
 
