--- a/schema/config-sections.yaml
+++ b/schema/config-sections.yaml
@@ -455,8 +455,8 @@ beacon:
     home_method: {{ probe.homing_mode | default('contact') }}
     home_method_when_homed: proximity
     home_autocalibrate: {{ probe.home_autocalibrate | default('unhomed') }}
-    mesh_main_direction: {{ probe.mesh_main_direction | default('y') }}
-    mesh_runs: {{ probe.mesh_runs | default(1) }}
+    mesh_main_direction: {{ probe.bed_mesh.mesh_main_direction | default('x') }}
+    mesh_runs: {{ probe.bed_mesh.mesh_runs | default(2) }}
 
 cartographer:
   condition: "probe.probe_type == 'cartographer'"
@@ -504,55 +504,58 @@ safe_z_home:
     z_hop_speed: {{ homing.z_hop_speed | default(15) }}
 
 # -----------------------------------------------------------------------------
-# Bed Leveling
+# Bed Mesh (in Probe section - mesh is probe-dependent)
 # -----------------------------------------------------------------------------
 bed_mesh:
-  condition: "bed_leveling.bed_mesh.enabled"
+  condition: "probe.bed_mesh.enabled"
   template: |
     [bed_mesh]
     {% if probe.probe_type in ['beacon', 'btt_eddy'] %}
     # Eddy probes: faster speed, lower horizontal_move_z (must be ≤2mm for valid readings)
-    speed: {{ bed_leveling.bed_mesh.speed | default(300) }}
-    horizontal_move_z: 2
+    speed: {{ probe.bed_mesh.speed | default(300) }}
+    horizontal_move_z: {{ probe.bed_mesh.horizontal_move_z | default(2) }}
     {% elif probe.probe_type == 'cartographer' %}
     # Cartographer: fast scanning with zero reference at bed center
-    speed: {{ bed_leveling.bed_mesh.speed | default(300) }}
-    horizontal_move_z: 2
+    speed: {{ probe.bed_mesh.speed | default(300) }}
+    horizontal_move_z: {{ probe.bed_mesh.horizontal_move_z | default(2) }}
     zero_reference_position: {{ (printer.bed_size_x / 2) | int }}, {{ (printer.bed_size_y / 2) | int }}
     {% else %}
-    speed: {{ bed_leveling.bed_mesh.speed | default(200) }}
-    horizontal_move_z: {{ bed_leveling.bed_mesh.horizontal_move_z | default(5) }}
+    speed: {{ probe.bed_mesh.speed | default(200) }}
+    horizontal_move_z: {{ probe.bed_mesh.horizontal_move_z | default(5) }}
     {% endif %}
-    {% if bed_leveling.bed_mesh.mesh_min == 'auto' %}
+    {% if probe.bed_mesh.mesh_min == 'auto' %}
     mesh_min: {{ (probe.x_offset | abs + 10) | int }}, {{ (probe.y_offset | abs + 10) | int }}
     {% else %}
-    mesh_min: {{ bed_leveling.bed_mesh.mesh_min }}
+    mesh_min: {{ probe.bed_mesh.mesh_min }}
     {% endif %}
-    {% if bed_leveling.bed_mesh.mesh_max == 'auto' %}
+    {% if probe.bed_mesh.mesh_max == 'auto' %}
     mesh_max: {{ (printer.bed_size_x - probe.x_offset | abs - 10) | int }}, {{ (printer.bed_size_y - probe.y_offset | abs - 10) | int }}
     {% else %}
-    mesh_max: {{ bed_leveling.bed_mesh.mesh_max }}
+    mesh_max: {{ probe.bed_mesh.mesh_max }}
     {% endif %}
     # Probe count: eddy probes are fast, use higher density for better mesh
     {% if probe.probe_type == 'cartographer' %}
-    probe_count: {{ bed_leveling.bed_mesh.probe_count | default('20, 20', true) }}
+    probe_count: {{ probe.bed_mesh.probe_count | default('20, 20', true) }}
     {% elif probe.probe_type in ['beacon', 'btt_eddy'] %}
-    probe_count: {{ bed_leveling.bed_mesh.probe_count | default('9, 9', true) }}
+    probe_count: {{ probe.bed_mesh.probe_count | default('9, 9', true) }}
     {% else %}
-    probe_count: {{ bed_leveling.bed_mesh.probe_count | default('5, 5', true) }}
+    probe_count: {{ probe.bed_mesh.probe_count | default('5, 5', true) }}
     {% endif %}
-    algorithm: {{ bed_leveling.bed_mesh.algorithm | default('bicubic') }}
+    algorithm: bicubic
     {% if probe.probe_type in ['beacon', 'cartographer', 'btt_eddy'] %}
-    # scan_overshoot: required for rapid_scan path optimization (min 1mm, 8mm recommended)
-    scan_overshoot: 8
+    # scan_overshoot: required for rapid_scan/scan path optimization
+    scan_overshoot: {{ probe.bed_mesh.scan_overshoot | default(8) }}
     {% endif %}
     {% if probe.probe_type == 'cartographer' %}
     # mesh_pps: disable interpolation for scan mode (Cartographer recommendation)
     mesh_pps: 0, 0
     {% endif %}
-    fade_start: {{ bed_leveling.bed_mesh.fade_start | default(0.6) }}
-    fade_end: {{ bed_leveling.bed_mesh.fade_end | default(10.0) }}
-    fade_target: {{ bed_leveling.bed_mesh.fade_target | default(0) }}
+    fade_start: {{ probe.bed_mesh.fade_start | default(0.6) }}
+    fade_end: {{ probe.bed_mesh.fade_end | default(10.0) }}
+
+# -----------------------------------------------------------------------------
+# Bed Leveling (Z Tilt / QGL)
+# -----------------------------------------------------------------------------
 
 z_tilt:
   condition: "bed_leveling.leveling_type == 'z_tilt'"
@@ -783,14 +786,14 @@ common:
       # Probe and Leveling
       variable_probe_type: "{{ probe.probe_type | default('none') }}"
       {% if probe.probe_type == 'beacon' %}
-      # Beacon uses 'scan' method for continuous fast scanning (not rapid_scan)
-      variable_eddy_mesh_method: "scan"
+      # Beacon uses 'scan' method for continuous fast scanning
+      variable_eddy_mesh_method: "{{ probe.bed_mesh.mesh_method | default('scan') }}"
       {% elif probe.probe_type == 'cartographer' %}
-      # Cartographer: use scan method (touch mode uses scan for mesh)
-      variable_eddy_mesh_method: "{{ probe.eddy_mesh_method | default('scan') }}"
+      # Cartographer: scan method (touch mode uses scan for mesh)
+      variable_eddy_mesh_method: "{{ probe.bed_mesh.mesh_method | default('scan') }}"
       {% elif probe.probe_type == 'btt_eddy' %}
-      # BTT Eddy: use rapid_scan by default for fast scanning
-      variable_eddy_mesh_method: "{{ probe.eddy_mesh_method | default('rapid_scan') }}"
+      # BTT Eddy: rapid_scan by default for fastest scanning
+      variable_eddy_mesh_method: "{{ probe.bed_mesh.mesh_method | default('rapid_scan') }}"
       {% else %}
       variable_eddy_mesh_method: "none"
       {% endif %}
